Kuber-Practice/k8s/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes
  template:
    metadata:
      labels:
        app: kubernetes
    spec:
      containers:
      - name: kubernetes-container
        image: kubernetes
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
