Kuber-Practice/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-service
spec:
  selector:
    app: kubernetes
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 3000
