Kuber-Practice/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress
  labels:
    app.kubernetes.io/name: kubernetes-app
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubernetes-service
            port: 
              number: 80
